--- a/index.html
+++ b/index.html
@@ -75,15 +75,14 @@
     // TODO: Add SDKs for Firebase products that you want to use
     // https://firebase.google.com/docs/web/setup#available-libraries
 
-    // Your web app's Firebase configuration
-    const firebaseConfig = {
-      apiKey: "AIzaSyCEGqXL1dtcotOYudzgZklkwZbDzFjCw0U",
-      authDomain: "fichazona.firebaseapp.com",
-      projectId: "fichazona",
-      storageBucket: "fichazona.appspot.com",
-      messagingSenderId: "849742326472",
-      appId: "1:849742326472:web:0ae3b3056b2b301b1693fd"
-    };
+  const firebaseConfig = {
+  apiKey: "AIzaSyABnOvpZV5kQbCAAPmCR-IuU-cG4FcEJ7U",
+  authDomain: "eafichamano.firebaseapp.com",
+  projectId: "eafichamano",
+  storageBucket: "eafichamano.appspot.com",
+  messagingSenderId: "417369264246",
+  appId: "1:417369264246:web:2a344eac373fc9fd3e8f57"
+};
 
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
